spectec/test/elab/neg/ctx-defined-dec-undefined.spectec
;; Triggers ctx/ctx.ml:153 — a def clause with no preceding dec declaration.

def $missing(n) = n
